Decisively fix all frame issues
Refactor Chat.js into ZeroRelayChat.js to fix layout issues. This might
not be the best way, but everything needed to be on the same level to
reduce complexity in the css.

--- a/src/js/components/Header/Header.css
+++ b/src/js/components/Header/Header.css
@@ -2,7 +2,7 @@
 #SettingsButton {
   color: rgba(50, 50, 50, 0.3);
   right: 0.3em;
-  float: left;
+  text-align: left;
   transform: translateY(40%);
   transition: color 0.3s ease;
 }
@@ -13,5 +13,12 @@
 }
 
 #Topic {
-  float: left;
+  text-align: left;
+}
+
+#Header {
+  position: fixed;
+  border-bottom: 1px black solid;
+  white-space: nowrap;
+  width: 99%;
 }
