--- a/src/js/components/UserInput/UserInput.css
+++ b/src/js/components/UserInput/UserInput.css
@@ -1,5 +1,5 @@
 #UserInput {
-  position: absolute;
+  position: fixed;
   width: 99%;
   bottom: 0.5em;
   left: 0.5em;
